--- a/main.scss
+++ b/main.scss
@@ -1,1 +1,93 @@
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: #2F4F4F;
+}
+
+body {
+  margin: 0;
+}
+
+.person {
+  box-sizing: border-box;
+  width: 200px;
+  transition-duration: 1s;
+  transition-property: transform,border-radius ;
+  transition-timing-function: ease-in-out;
+
+  &:hover{
+    background-color:#EEEEEE;
+    transform: scale(1.32);
+
+    .photo{
+      border-radius: 60px; 
+    }
+
+    .extra {
+      display: inline;
+    }
+
+  }
+}
+
+.people {
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  justify-content: center;
+  align-items: center;
+  gap: 40px 30px;
+  margin: 30px 0 0;
+
+  @media (min-width: 1000px) {
+    grid-template-columns: repeat(4, 200px);
+  }
+}
+
+.photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 200px; 
+  overflow: hidden;
+  transition-duration: 1s;
+}
+
+.photo img {
+  width: 200px;
+}
+
+.rank {
+  position: absolute;
+  right: 10px;
+  width: 32px;
+  height: 32px;
+  background-color: #fff;
+  color:#8B0000;
+  line-height: 32px;
+  font-size: 16px;
+  border-radius: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.details {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 8px;
+}
+
+.extra {
+  display: none;
+  color: #000;
+  font-size: 18px;
+}
+
+.name {
+  line-height: 23px;
+  font-size: 20px;
+  font-weight: bold;
+}
 
